# ChessOverSockets

./: .gitignore  CMakeLists.txt  README.md
client/: main.cpp
client/include/: client.h  pieces.h
client/src/: client.cpp  pieces.cpp
server/: main.cpp
server/include/: network_helper.h
server/src/: network_helper.cpp
